--- a/public/stylesheets/post_edit.sass
+++ b/public/stylesheets/post_edit.sass
@@ -25,7 +25,7 @@
       font-size: 18px
       line-height: 18px
       color: #68879F
-      margin: 30px 0 10px 0
+      margin: 20px 0 10px 0
 
   h1
     @include heading
@@ -204,7 +204,7 @@
     margin-bottom: 60px
 
   .page_selector
-    @include size(195px, 44px)
+    width: 195px
 
   .cancel
     float: right
@@ -283,8 +283,6 @@
     line-height: 35px
     .img_left
       padding-top: 10px
-      .desc
-        padding-top: 5px
     a
       padding-right: 0
 
