--- a/app/views/shared/_pagination.html.haml
+++ b/app/views/shared/_pagination.html.haml
@@ -1,7 +1,7 @@
 .page_control
-  - if current_page > 1
-    %a.page_left{href: "#{base_url}/page/#{current_page - 1}"} &#8592; 最近的
+  - if defined?(prev_page_url)
+    %a.page_left{href: prev_page_url} &#8592; 最近的
   - if current_page != 1
     .page_number= current_page
-  - if (!collection.empty? && collection.length >= per_page)
-    %a.page_right{href: "#{base_url}/page/#{current_page + 1}"} 以前的 &#8594;
+  - if defined?(next_page_url)
+    %a.page_right{href: next_page_url} 以前的 &#8594;
