--- a/app/views/tags/_blog.html.haml
+++ b/app/views/tags/_blog.html.haml
@@ -5,7 +5,7 @@
   .page_name<
     %a{ :href => blog_path(blog) }<
       = blog.title
-  - unless current_user.all_blogs.include? blog
+  - if current_user and not current_user.all_blogs.include? blog
     .follow
       %a{:href => follow_toggle_blog_path(blog), :id => "tar_follow_#{blog.id}",
         :data => {:method => "POST", :remote => "true"}, :title => "关注"}
