--- a/public/stylesheets/control_buttons.css
+++ b/public/stylesheets/control_buttons.css
@@ -8,16 +8,19 @@
 }
 
 .commands .remove, .commands .edit,
-.back_to_home, .btn_unfollow, .btn_follow, .btn_apply, .btn_customize {
+.back_to_home, .btn_unfollow, .btn_follow, .btn_apply, .btn_customize, .btn_repost {
   text-indent: -9999px;
   margin-left: 10px;
   height: 20px;
 }
-.back_to_home, .btn_unfollow, .btn_follow, .btn_apply, .btn_customize {
+.back_to_home, .btn_unfollow, .btn_follow, .btn_apply, .btn_customize, .btn_repost {
   width: 80px;
 }
 .commands .remove, .commands .edit {
   width: 20px;
+}
+.btn_repost {
+  background: url('/images/btn_repost.gif')
 }
 .btn_customize {
   background: url('/images/btn_customize.gif')
