Clicking on template author name would open his primary blog

--- a/app/views/blogs/edit.html.haml
+++ b/app/views/blogs/edit.html.haml
@@ -69,7 +69,8 @@
             .shadow
             %div
               - if t.id
-                %a{href: blog_path(t.author.primary_blog)}
+                %a{href: blog_path(t.author.primary_blog), target: '_blank',
+                  data: {widget: 'sureLink'}}
                   = t.author.name
                 = t.name
               - else
