--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -298,14 +298,14 @@ form.edit_blog
         font-weight: bold
         font-size: 14px
 
-      span
+      .template_thumb
         border: 7px solid #E2E2E2
         cursor: pointer
         display: block
         height: 120px
         overflow: hidden
 
-      .selected span
+      .selected .template_thumb
         border: 7px solid #F9D853
 
     .theme
@@ -322,7 +322,8 @@ form.edit_blog
       .author_name
         color: gray
         display: inline
-
+      .template_name
+        cursor: pointer
 
     .image
       border: 7px solid #E2E2E2
