--- a/public/stylesheets/blog_show.css
+++ b/public/stylesheets/blog_show.css
@@ -118,19 +118,15 @@ width:220px;
 padding:0px 30px 30px 30px;
 float:right;
 }
-#sidebar #avatar {
-height:140px;
-}
 #sidebar #avatar img {
 border:1px solid gray;
 display:block;
 margin:auto;
 }
 #sidebar #description{
-margin-top:20px 0px;
-text-align:center;
-font-size:20px;
-line-height:150%;
+margin-top:20px;
+font-size:14px;
+line-height:1.5;
 color:gray;
 }
 
