Don't make dumb people confused

--- a/doc/templates/readme.html
+++ b/doc/templates/readme.html
@@ -362,7 +362,7 @@ Section里使用</p>
   text subtitle 副标题 我在宽岛的小屋
 {{/define}}
 
-&lt;a href="{{url}}"&gt;
+&lt;a href="/"&gt;
   &lt;h1&gt;{{title}} - {{text_subtitle}}&lt;/h1&gt;
 &lt;/a&gt;
 </code></pre>
