Fix dialog for adding image

--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -485,3 +485,17 @@ fieldset.appearance
   .main
     float: left
     width: 750px
+
+.edit_blog .blog_info
+  .dialog-label
+    display: inline
+    font:
+      size: 12px
+      weight: normal
+
+  .dialog-input
+    width: 190px
+    *width: 175px
+    padding:
+      top: 4px
+      bottom: 4px
