working on uploadimage in mooeditable

--- a/app/views/layouts/posts.html.haml
+++ b/app/views/layouts/posts.html.haml
@@ -11,6 +11,6 @@
 
 - content_for :head, do
   - css "post_edit", "mooeditable", 'textboxlist'
-  - js "mooeditable", "mooeditable.local", 'post_form', 'textboxlist'
+  - js "Mooeditable.UploadImage", "mooeditable", "mooeditable.local", 'post_form', 'textboxlist'
 
 = render :file => 'layouts/application'
