avatar no-repeat

--- a/app/views/posts/_post_full.html.haml
+++ b/app/views/posts/_post_full.html.haml
@@ -1,7 +1,7 @@
 .article.tar_post{ class: (article_class ||= "") , :data => {:widget => 'fixHover'}}
   .author_arrow
   .avatar
-    .image{style: "background:url(#{post.blog.icon.url_for(:medium)})"}<
+    .image{style: "background-image:url(#{post.blog.icon.url_for(:medium)})"}<
       %a{href: blog_path(post.blog)}<
         &nbsp;
     %div<
