--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,11 +3,11 @@
 - @site_layout = 'site'
 .dashboard
   .head
-    .head_avatar{style: "background:url(#{@user.primary_blog.icon.url_for(:medium)})"}<
+    .head_avatar{style: "background-image:url(#{@user.primary_blog.icon.url_for(:medium)})"}<
       %a{href: blog_path(@user.primary_blog)}<
         &nbsp;
     - if @blog && !@blog.primary
-      .icon_s{style: "background:url(#{@blog.icon.url_for(:'30')})"}<
+      .icon_s{style: "background-image:url(#{@blog.icon.url_for(:'30')})"}<
         %a{href: home_path(@blog)}<
           &nbsp;
 
