--- a/app/views/layouts/_nav_user.html.haml
+++ b/app/views/layouts/_nav_user.html.haml
@@ -1,10 +1,10 @@
 .nav_user
   .z_header
-  .z_icon{style: "background:url(#{@user.primary_blog.icon.url_for(:medium)})"}<
+  .z_icon{style: "background-image:url(#{@user.primary_blog.icon.url_for(:medium)})"}<
     %a{href: blog_path(@user.primary_blog)}<
       &nbsp;
   - if @blog && !@blog.primary
-    .z_icon_s{style: "background:url(#{@blog.icon.url_for(:'30')})"}<
+    .z_icon_s{style: "background-image:url(#{@blog.icon.url_for(:'30')})"}<
       %a{href: home_path(@blog)}<
         &nbsp;
   .z_title
