--- a/public/stylesheets/dashboard.sass
+++ b/public/stylesheets/dashboard.sass
@@ -153,7 +153,9 @@ a.page_name
 
   .head_avatar
     @include size(60px, 60px)
-    background: url('/images/default_icon_medium.gif')
+    background-image: url('/images/default_icon_medium.gif')
+    background-repeat: no-repeat
+    background-position: center
     -moz-border-radius: 5px
     border-radius: 5px
     margin: 20px
@@ -347,7 +349,9 @@ a.page_name
       -moz-border-radius: 6px
       border-radius: 6px
       margin-bottom: 5px
-      background: url('/images/default_blog_icon.jpg')
+      background-image: url('/images/default_blog_icon.jpg')
+      background-repeat: no-repeat
+      background-position: center
       
       a
         @include size(60px, 60px)
