记录注册用户来源

--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -27,5 +27,6 @@
     &nbsp;
     = @user.errors[:password_confirmation].first
   = hidden_field_tag 'code', @inv_user.inv_code
+  = hidden_field_tag 'refer', request.referer
   .submit_box
     = f.submit "注册"
