avatar no-repeat

--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -266,7 +266,9 @@ a.logo
     -moz-border-radius: 6px
     border-radius: 6px
     margin-bottom: 5px
-    background: url('/images/default_blog_icon.jpg')
+    background-image: url('/images/default_blog_icon.jpg')
+    background-repeat: no-repeat
+    background-position: center
     a
       @include size(60px, 60px)
       display: block
