--- a/app/views/blogs/_editor.html.haml
+++ b/app/views/blogs/_editor.html.haml
@@ -1,6 +1,6 @@
 %li.member
   .avatar_60
-    .z_image{style: "background:url(#{editor.icon.url_for(:medium)})"}<
+    .z_image{style: "background-image:url(#{editor.icon.url_for(:medium)})"}<
       %a{ :href => blog_path(editor.primary_blog) }<
         &nbsp;
   .z_name
