--- a/app/views/blogs/followers.html.haml
+++ b/app/views/blogs/followers.html.haml
@@ -9,7 +9,7 @@
       - blog = user.primary_blog
       %li{ :id => "blog_#{blog.id}" }
         .avatar_60
-          .z_image{style: "background:url(#{blog.icon.url_for(:medium)})"}<
+          .z_image{style: "background-image:url(#{blog.icon.url_for(:medium)})"}<
             %a{ :href => blog_path(blog) }<
               &nbsp;
         .z_name<
