--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,6 +1,6 @@
 %li{class: (message.unread? ? "new" : "")}
   .avatar_60
-    .z_image{style: "background:url(#{message.sender.icon.url_for(:medium)})"}<
+    .z_image{style: "background-image:url(#{message.sender.icon.url_for(:medium)})"}<
       %a{ :href => blog_path(message.sender.primary_blog) }<
         &nbsp;
   .z_operation
