--- a/app/views/users/followings.html.haml
+++ b/app/views/users/followings.html.haml
@@ -8,7 +8,7 @@
     - @blogs.each do |blog|
       %li{ :id => "blog_#{blog.id}" }
         .avatar_60
-          .z_image{style: "background:url(#{blog.icon.url_for(:medium)})"}<
+          .z_image{style: "background-image:url(#{blog.icon.url_for(:medium)})"}<
             %a{ :href => blog_path(blog) }
         .z_name
           %a{ :href => blog_path(blog) }
