--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,9 +8,8 @@
     = stylesheet_link_tag "base"
     - if not @css.nil?
       = stylesheet_link_tag *(@css.uniq)
-    - js 'application', 'mootools-more', 'rails', 'mootools-core'
-    - @js.uniq.reverse!.each do |f|
-      = javascript_include_tag f
+    - js :common
+    = include_javascripts *@js
     = csrf_meta_tag
     %link{ :rel => "shortcut icon", :href => "/images/favicon.ico" }
     :javascript
