--- a/app/views/posts/_form_pics.html.haml
+++ b/app/views/posts/_form_pics.html.haml
@@ -1,4 +1,4 @@
-- js 'Fx.ProgressBar', 'FancyUpload3.Attach', 'Swiff.Uploader'
+- js :upload_pics
 - @post_type ||= capture do
   图片贴
 - content_for :form do
