--- a/app/views/layouts/apply.html.haml
+++ b/app/views/layouts/apply.html.haml
@@ -3,8 +3,7 @@
   = yield
   = render :partial => 'shared/footer'
 
-- content_for :head, do
-  = stylesheet_link_tag "apply"
+- css :apply
 
 - content_for :site_layout, "site_middle_size"
 
