--- a/app/views/posts/news.html.haml
+++ b/app/views/posts/news.html.haml
@@ -2,8 +2,7 @@
 - @nav_now = "news"
 - content_for :title, @sub_title
 
-- content_for :head do
-  = stylesheet_link_tag 'post_display', 'dashboard'
+- css :posts_display
 
 .latest
   %h1 正在发生的事
