--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,5 +1,5 @@
-- content_for :head do
-  = stylesheet_link_tag 'post_display', 'dashboard'
+- css :posts_display
+
 - @site_layout = 'site'
 .dashboard
   .head
