--- a/app/views/posts/wall.html.haml
+++ b/app/views/posts/wall.html.haml
@@ -3,8 +3,7 @@
 
 - content_for :site_layout, "site_max_size"
 
-- content_for :head do
-  = stylesheet_link_tag 'wall'
+- css :wall
 - js :wall
 
 - content_for :content, do
