--- a/public/stylesheets/base.sass
+++ b/public/stylesheets/base.sass
@@ -129,7 +129,7 @@ a.logo
   display: inline
   border: 0
   @include size($logo-width, 46px)
-  background: url('/images/logo.gif')
+  background: url('/images/embed/logo.gif')
   float: left
 
 .site
