embed arrow1/arrow2

--- a/public/stylesheets/post_display.sass
+++ b/public/stylesheets/post_display.sass
@@ -380,7 +380,7 @@
     padding: 0
 
   .author_arrow
-    background: url("/images/arrow1.gif") no-repeat
+    background: url("/images/embed/arrow1.gif") no-repeat
     position: absolute
     top: 32px
     left: 65px
@@ -408,7 +408,7 @@
 
 .hover
   .author_arrow
-    background-image: url("/images/arrow2.gif")
+    background-image: url("/images/embed/arrow2.gif")
     border-right: 2px white solid
     left: 67px
     *left: 68px
