Upload thumbnail for submitted template

--- a/app/views/blogs/edit.html.haml
+++ b/app/views/blogs/edit.html.haml
@@ -107,7 +107,10 @@
         %label{for: 'tpl_name'} 模板名称
         %input{name: 'tpl_name', id: 'tpl_name'}
         %p 上传缩略图
-        %input{type: 'file'}
+        %img#submit_tpl_thumb_preview{src: "#{fucking_root}images/default_icon_60.jpg", width: 60,
+          height: 60}
+        %input{type: 'hidden', name: 'tpl_thumbnail_id'}
+        %input#submit_tpl_thumb{type: 'file', name: 'file'}
   %fieldset.appearance.menu{ data: {widget: "appearance"}}
     = render :partial => 'blogs/template_variables'
   %fieldset.service.menu
@@ -146,7 +149,7 @@
   document.addEvent('domready', function(){
     var context = document.getElement('.aside')
       , list = context.getElement('.assets')
-      , fileInput = context.getElement('input[type=file]')
+      , fileInput = context.getElement('.upload_asset').getElement('input[type=file]')
       , UPLOAD_PATH = '/upload/asset'
       , TPL = '<img width=62 height=62 src="{src}"><p>{src}</p>'
       , uploader = new K.file_uploader(fileInput, UPLOAD_PATH, {
@@ -172,4 +175,18 @@
         K.applyWidgets(partial)
       }
     }).send()
+  })
+
+  document.addEvent('domready', function() {
+    var fileInput = document.id('submit_tpl_thumb')
+      , UPLOAD_PATH = '/upload/template_thumbnail'
+      , img = document.id('submit_tpl_thumb_preview')
+      , thumbId = document.getElement('input[name=tpl_thumbnail_id]')
+      , uploader = new K.file_uploader(fileInput, UPLOAD_PATH, {
+          onSuccess: function(res) {
+            var image = res.image
+            img.src = image.small
+            thumbId.value = image.id
+          }
+        })
   })
