--- a/app/views/blogs/edit.html.haml
+++ b/app/views/blogs/edit.html.haml
@@ -92,7 +92,7 @@
           %a.button.strong{href: "#", data: {widget: 'diverseSubmit',
             action: '/preview', target: 'preview', methord: 'POST'}}
             预览效果
-          %input{type: 'checkbox', id: 'submit_tpl_as_well',
+          %input#submit_tpl_as_well{type: 'checkbox',
             name: 'submit_tpl_as_well', value: '1', checked: false}
           = f.label :submit_tpl_as_well, '同时提交到模板库'
           %a.button{href: "#", data: {widget: 'toggler', target: 'fieldset.template',
@@ -100,12 +100,12 @@
             返回选择模板
           %a.button{href: fucking_root + 'doc/template.html', target: '_blank'} 帮助
       .aside
-        %p 上传图片素材
+        %label{for: 'upload_asset'} 上传图片素材
         .upload_asset
-          %input{type: 'file', name: 'file'}
+          %input#upload_asset{type: 'file', name: 'file'}
         %ul.assets
         %label{for: 'tpl_name'} 模板名称
-        %input{name: 'tpl_name', id: 'tpl_name'}
+        %input.text_input{name: 'tpl_name', id: 'tpl_name'}
         %p 上传缩略图
         %img#submit_tpl_thumb_preview{src: "#{fucking_root}images/default_icon_60.jpg", width: 60,
           height: 60}
