--- a/public/stylesheets/wall.sass
+++ b/public/stylesheets/wall.sass
@@ -11,30 +11,22 @@ img
   border: 0
 
 body
-  background: black
+  background: #070907
 
 .site_max_size
   overflow: hidden
 
-#wrapper
-  z-index: 999
-  margin: 0 auto
-  position: relative
-
-  .commands
-    position: absolute
-    top: 10px
-    right: 10px
-    a
-      float: right
-   
-  .back_to_home
-    text-indent: -9999px
-    margin-left: 10px
-    height: 30px
-    width: 30px
-    background: url('/images/wall_home.gif')
-
+.header
+  margin-top: 5px
+  height: 50px
+  a.logo
+    display: inline
+    border: 0
+    @include size(200px, 46px)
+    background: url('/images/embed/logo_deep.gif')
+    float: left
+    @include hide_text
+        
 .wall
   @include clear_fix
 
