--- a/public/stylesheets/blog.sass
+++ b/public/stylesheets/blog.sass
@@ -500,6 +500,17 @@ fieldset.appearance
       top: 4px
       bottom: 4px
 
-fieldset.service
+.edit_blog fieldset.service
   left: 210px
   width: 320px
+  font-size: 16px
+  line-height: 1.5
+
+.sina_weibo
+  border: 1px #ddd solid
+  @include border-radius(8px)
+  padding: 0.5em
+
+  .caption
+    background: url('/images/sina_24x24.png') no-repeat
+    padding-left: 2em
