--- a/public/stylesheets/wall.sass
+++ b/public/stylesheets/wall.sass
@@ -37,8 +37,8 @@ body
     float: left
     width: 180px
     overflow: hidden
- 
     &.store
+      float: none
       visibility: hidden
       height: 0
 
