Able to stop syncing

--- a/app/views/blogs/edit.html.haml
+++ b/app/views/blogs/edit.html.haml
@@ -107,12 +107,7 @@
       %li.sina_weibo
         .caption 同步到新浪微博
         - sina = @blog.sync_targets.detect {|t| SinaWeibo === t && t.status == :verified}
-        - if sina
-          %a.sync_cancel{href: blog_path(@blog) + 'sync_cancel/sina_weibo'}
-            中止同步
-        - else
-          %a.sync_apply{target: '_blank', href: blog_path(@blog) + 'sync_apply/sina_weibo'}
-            &nbsp;&#8594; 绑定帐号
+        = render :partial => 'sync/target', :object => sina
   %fieldset.advanced.menu
     .item.toggle_private
       = f.check_box :private
